--- a/apps/desktop/VibeTuto/Resources/Info.plist
+++ b/apps/desktop/VibeTuto/Resources/Info.plist
@@ -5,13 +5,13 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleExecutable</key>
-    <string>VibeTuto</string>
+    <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
     <string>com.vibetuto.recorder</string>
     <key>CFBundleName</key>
-    <string>CapTuto Recorder</string>
+    <string>CapTuto</string>
     <key>CFBundleDisplayName</key>
-    <string>CapTuto Recorder</string>
+    <string>CapTuto</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
